--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.1_Database_File_Layout.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.1_Database_File_Layout.md
@@ -4,7 +4,7 @@
 1. `$PGDATA`
 
    All the data files of a PG cluster is stored in directory called `PGDATA`, 
-   when initializing or start a pg database, one can specify this location
+   when initializing or starting a pg database, one can specify this location
    with either `-D/--pgdata` or environment variable `PGDATA`.
 
 2. Files under `PGDATA`
@@ -206,8 +206,8 @@
    ``` 
 
    Apart the main file (also called main fork) described above, each table and 
-   index also has a free space map, stores information about available space
-   in the main file, it is named `filenode_fsm`.
+   index (non-hash index) also has a free space map, stores information about 
+   available space in the main file, it is named `filenode_fsm`.
 
    Tables also have a visibility map to track pages that have no dead tuples(tuples
    that have been removed, will be cleared in `vacuum` (compaction in LSM), stored
@@ -222,16 +222,20 @@
    > It is quite common that the `oid` of a table matches its `filenode`, but 
    > it is not necessarily the case.
    >
+   > ```
    > steve> select oid, relname, relfilenode from pg_class where relname = 'students'
    > +-------+----------+-------------+
    > | oid   | relname  | relfilenode |
    > |-------+----------+-------------|
    > | 24576 | students | 24576       |
    > +-------+----------+-------------+
+   > ```
 
 4. Some tables' `relfilenode`s are 0, 0 is just an indicator indicating that the
-   real `relfilenode` is stored in a low level data strucutre, and can be obtained 
+   real `relfilenode` is stored in a low level data structure, and can be obtained 
    by table function `pg_relation_filenode()`
+
+   > QUES: what tables will have filenode 0?
 
 
    ```sh
@@ -242,7 +246,7 @@
    | 1247                 |
    +----------------------+
 
-   steve> select relfilenode, relname from pg_class where relfilenode = 0 limit  10;
+   steve> select relfilenode, relname from pg_class where relfilenode = 0 limit 10;
    +-------------+---------------------+
    | relfilenode | relname             |
    |-------------+---------------------|
@@ -259,10 +263,24 @@
    +-------------+---------------------+
    ```
 
-5. By default, when a table file (fork)'s exceeds 1 GiB, it will be spliited to 
+   Function `pg_relation_filepath()` returns the relative path (relative to `PGDATA`)
+   of **the first main fork** of a relation:
+
+   > It won't show other forks, fsm, vm, and main fork can span multiple files.
+
+   ```sql
+   steve> select * from pg_relation_filepath('public.students');
+   +----------------------+
+   | pg_relation_filepath |
+   |----------------------|
+   | base/16388/24576     |
+   +----------------------+
+   ```
+
+5. By default, when a table file (fork)'s exceeds 1 GiB, it will be split to 
    multiple segments, each segment will be 1 GiB at most.
 
    This limit value can be adjusted during compilation with `--with-segsize`.
 
    Other forks like free space map and visibility also have this limit, but 
-   this probably won't happen in practise.
+   this probably won't happen in practice.
