--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.2_TOAST.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.2_TOAST.md
@@ -5,12 +5,42 @@
    Pg by default uses 8k as the page size, and dose not allow a tuple to span
    multiple pages, so it is not possible to store a field larger than 8k directly.
 
-   To overcome this limitation, large fileds are compressed and broken up into
-   multuple physical rows, this is called TOAST, it is used both in memory and
-   on disk.
+   And actually, if a tuple is larger than `TOAST_TUPLE_THRESHOLD`(2KiB by default),
+   then TOAST will kick in.
+
+   To overcome this limitation, large fields are compressed and broken up into
+   multiple physical rows in an associated TOAST table, this is called TOAST, 
+   it is used both in memory and on disk.
+
+   > The `OID` of the TOAST table of a table can be listed via:
+   >
+   > 0 means that this table does not have an associated TOAST table.
+   > 
+   > ```sql
+   > steve> select relname, reltoastrelid from pg_catalog.pg_class limit 10
+   > +---------------------+---------------+
+   > | relname             | reltoastrelid |
+   > |---------------------+---------------|
+   > | students            | 0             |
+   > | index_on_id         | 0             |
+   > | pg_statistic        | 2840          |
+   > | pg_type             | 4171          |
+   > | pg_toast_1255       | 0             |
+   > | pg_toast_1255_index | 0             |
+   > | pg_toast_1247       | 0             |
+   > | pg_toast_1247_index | 0             |
+   > | pg_toast_2604       | 0             |
+   > | pg_toast_2604_index | 0             |
+   > +---------------------+---------------+
+   > ```
 
 2. TOAST is only supported by var-len types, for fixed-length types, they 
    unlikely exceeds the 8k limit.
+
+   * JSON/JSONB
+   * TEXT
+   * VARCHAR
+   * BYTEA
 
    Var-len types in PostgreSQL have the following representation:
 
@@ -18,7 +48,13 @@
    | length (4B, including this 4B) | Contents (var-len) |
    ```
 
-   If a var-len field uses TOAST, then we say its value is TOASTed, it will
-   no longer has the above format after that. The process of reverting a
-   TOASTed value is called detoasting (Usually done by invoking the 
-   `PG_DETOAST_DATUM()` function).
+   If a var-len field uses TOAST, then we say its value is TOASTed, after this,
+   the length 4 bytes will no longer be used to store length.
+   
+   The process of reverting a TOASTed value is called detoasting (Usually done by 
+   invoking the `PG_DETOAST_DATUM()` function).
+
+3. Format of a toasted attribute
+
+   00: untoasted, the remaining 30 bits contain the data length.
+
