--- a/database/PostgreSQL/pg16_docs/Ch5_Data_Definition/5.9_schemas.md
+++ b/database/PostgreSQL/pg16_docs/Ch5_Data_Definition/5.9_schemas.md
@@ -32,6 +32,24 @@
    Schema behaves like a namespace, but why does pg need such a namespace, it 
    already has databases.
 
+   > Damn, it is called namespace in the source code, and all the defined schemas
+   > are stored in system catalog `pg_catalog.pg_namespace`
+   >
+   >
+   > ```sql
+   > steve> select * from pg_namespace;
+   > +-------+--------------------+----------+--------------------------------------------------------------------+
+   > | oid   | nspname            | nspowner | nspacl                                                             |
+   > |-------+--------------------+----------+--------------------------------------------------------------------|
+   > | 99    | pg_toast           | 10       | <null>                                                             |
+   > | 11    | pg_catalog         | 10       | ['steve=UC/steve', '=U/steve']                                     |
+   > | 2200  | public             | 6171     | ['pg_database_owner=UC/pg_database_owner', '=U/pg_database_owner'] |
+   > | 14216 | information_schema | 10       | ['steve=UC/steve', '=U/steve']                                     |
+   > +-------+--------------------+----------+--------------------------------------------------------------------+
+   > SELECT 4
+   > Time: 0.007s
+   > ```
+
    Well, a connection to the pg server can ONLY use 1 database, the one specified
    in the connection, so database won't really work here.
 
