--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.6_Database_Page_Layout.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.6_Database_Page_Layout.md
@@ -30,10 +30,10 @@
    | Item | Description| 
    |------|------------|
    |PageHeaderData | 24 bytes long, contains general infornation about the page, including 2 free space pointers|
-   |ItemIdData | Array of item identifiers pointing to the actual items, each entry is an (offset, len) pair, 4 bytes per item |
+   |ItemIdData | Array of item identifiers pointing to the actual items, each entry is an (offset, len) pair (fat ptr), 4 bytes per item |
    |FreeSpace | The unallocated space, new ItemID will be allocated from the start, item from the end |
    |Items | The actual items (tuples) |
-   |Special space | Index method specific data, empty for table pages |
+   |Special space | Index method specific data, empty for table pages (B+Tree index stores left and right sibling ptrs) |
 
    ![diagram](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202024-03-18%2008-24-47.png)
 
@@ -59,15 +59,17 @@
 
 5. PageHeaderLayout
 
+   > src: `src/include/storage/bufpage.h`
+
    | Field | Type | Len | Description |
    |-------|------|-----|-------------|
    | pd_lsn | PageXLogRecPtr | 8 bytes | LSN: next byte after last byte of WAL record for last (latest) change to this page |
-   | pd_checksum | uint16 | 2 bytes | Page checksum if `data checksums` are enabled (`SHOW data_checksum`) or it will all 0s |
+   | pd_checksum | uint16 | 2 bytes | Page checksum if `data checksums` are enabled (`SHOW data_checksum`) or it will all 0s (src: `src/include/storage/checksum_impl.h` ) |
    | pd_flags | uint16 | 2 bytes | flag bits |
    | pd_lower | LocationIndex (alias to uint16) | 2 bytes | offset to start of free space |
    | pd_upper | LocationIndex (alias to uint16) | 2 bytes | offset to end of free space |
-   | pd_special | LocationIndex (alias to uint16) | 2 bytes | offset to start of special space (8192 if this is a table page) |
-   | pd_page_size_version | uint16 | 2 bytes | Page size and layout version number (On a little endian machine, the first byte is the page version, the second byte is page size, starting from Pg 8.3, page version is 4) |
+   | pd_special | LocationIndex (alias to uint16) | 2 bytes | offset to start of special space (8192 if this is a table page, i.e, no special space) |
+   | pd_page_size_version | uint16 | 2 bytes | Page size and layout version number (On a little endian machine, the first byte is the page version, the second byte is page size (serves as a crosscheck, variable page size is not supported), starting from Pg 8.3, page version is 4) |
    | pd_prune_xid | TransactionId (alias to uint32) | 4 bytes | Oldest unpruned XMAX on page, or zero if none |
 
    The `pd_page_size` field is simply for check purpose, PostgreSQL does not 
@@ -92,11 +94,52 @@
    | wal file ID (32 bits) | segment number (8bits) | block number (13bits) |offset within the block (11bits) |
    ```
 
+7. The number of `ItemIdData` allocated can be calculated with
 
-7. The field `ctid`, is the number of `(page ID, idx of ItemID)`.
+   $$ (pd\_lower - 12) /4 $$
 
-8. Tuple layout
+8. The field `ctid`, is the number of `(page ID, idx of ItemID)`. An `ItemIdData`
+   will not be moved until it is freed, so `ctid` can be seen as a long-term 
+   reference to a tuple.
 
-   * header
-   * NULL bitmap
-   * tuple data
+   Even though a tuple data is moved within a page, its `ItemIdData` won't be 
+   moved.
+
+9. Tuple layout
+
+   * fixed-size header
+   * Optional NULL bitmap 
+
+     1. It is Some if the `HEAP_HASNULL` bit is set in `t_infomask` in header
+     2. Every field will occupy 1 bit, and the total size will be rounded up to
+        whole bytes, i.e., 5 bits -> 1 byte.
+        If the bit is set, then this field is non-null.
+     3. If this field is None, then all the fields are non-null.
+
+   * Optional Object ID
+
+     This ID is only present if the `HEAP_HASOID_OLD` bit is set in `t_infomask`. 
+     If present, it appears just before the `t_hoff` boundary.
+
+   * tuple data (start offset stored in header `t_hoff`)
+
+     The tuple data must be aligned with `MAXALIGN`, the padding needed by this
+     alignment is stored between optional NULL bitmap and optional Object ID.
+
+     To interrupt the tuple data, one has to read the data from other tables, 
+     mostly `pg_attribute`.
+
+10. Tuple header
+
+    > src/include/access/htup_details.h
+
+    |name    | type               | length | Description      | 
+    |--------|--------------------|--------|------------------|
+    | t_xmin | TransactionId(u32) | 4B     | insert XID stamp |
+    | t_xmax | TransactionId(u32) | 4B     | delete XID stamp |
+    | t_cid  | CommandId(u32)     | 4B     | insert or delete CID stamp (overlays with t_xvac) |
+    | t_xvac | TransactionId(u32) | 4B     | XID for VACUUM operation moving a row version |
+    | t_ctid | ItemPointerData(struct) | 6B     | XID for VACUUM operation moving a row version |
+    | t_infomask2 | uint16 | 2B     | number of attributes, plus various bitflags |
+    | t_infomask | uint16 | 2B     | plus various bitflags |
+    | t_hoff | uint8 | 1B     | offset to user data |
