--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.6_Database_Page_Layout.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.6_Database_Page_Layout.md
@@ -69,7 +69,7 @@
    | pd_lower | LocationIndex (alias to uint16) | 2 bytes | offset to start of free space |
    | pd_upper | LocationIndex (alias to uint16) | 2 bytes | offset to end of free space |
    | pd_special | LocationIndex (alias to uint16) | 2 bytes | offset to start of special space (8192 if this is a table page, i.e, no special space) |
-   | pd_page_size_version | uint16 | 2 bytes | Page size and layout version number (On a little endian machine, the first byte is the page version, the second byte is page size (serves as a crosscheck, variable page size is not supported), starting from Pg 8.3, page version is 4) |
+   | pd_page_size_version | uint16 | 2 bytes | Page size and layout version number (On a little endian machine, the first byte is the page version (low 8 bits), set the first byte to 0s, plus the second byte, interrupt it as an `u16`, then you get the page size (serves as a crosscheck, variable page size is not supported), starting from Pg 8.3, page version is 4) |
    | pd_prune_xid | TransactionId (alias to uint32) | 4 bytes | Oldest unpruned XMAX on page, or zero if none |
 
    The `pd_page_size` field is simply for check purpose, PostgreSQL does not 
