--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.6_Database_Page_Layout.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.6_Database_Page_Layout.md
@@ -52,7 +52,7 @@
    > {
    > unsigned	lp_off:15,		/* offset to tuple (from start of page) */
    >           lp_flags:2,		/* state of line pointer, see below */
-   >           lp_len:15;		/* byte length of tuple */
+   >           lp_len:15;		/* byte length of tuple (unaligned) */
    > } ItemIdData;
    > ``` 
 
