--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.1_Database_File_Layout.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.1_Database_File_Layout.md
@@ -280,6 +280,14 @@
 5. By default, when a table file (fork)'s exceeds 1 GiB, it will be split to 
    multiple segments, each segment will be 1 GiB at most.
 
+   > This is because when the page size is 8192, the maximum file size is 1 GiB,
+   > controlled by page size `BLCKSZ` 8192 and `RELSEG_SIZE` 131072
+   >
+   > 8192 * 131072 = 1073741824 = 1 GiB
+   >
+   > Postgres limits file size to 1 GiB because they don't want to exceed the
+   > OS limit, on 32-bit OSes, the file size limit is usually 2 GiB or 4 GiB.
+
    This limit value can be adjusted during compilation with `--with-segsize`.
 
    Other forks like free space map and visibility also have this limit, but 
