--- a/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.1_Database_File_Layout.md
+++ b/database/PostgreSQL/pg16_docs/Ch73_Database_Physical_Storage/73.1_Database_File_Layout.md
@@ -165,7 +165,8 @@
 
 3. Database files
 
-   All the files of a database are stored under `PGDATA/base/OID`.
+   All the files of a database are stored under `PGDATA/base/OID` (if using the
+   default tablespace).
 
    Table and indexes are stored in their own file, files for ordinary tables 
    and indexes are named after their `filenode`, for temporary tables, they 
