--- a/database/PostgreSQL/pg17_docs/Ch62_Index_Access_Method_Interface_Definition/62.1_Basic_API_Structure_for_Indexes.md
+++ b/database/PostgreSQL/pg17_docs/Ch62_Index_Access_Method_Interface_Definition/62.1_Basic_API_Structure_for_Indexes.md
@@ -2,7 +2,7 @@
 >
 > * Before I read it
 >   
->   A very basic introduction to the `struct IndexAmRoutine`
+>   A very basic introduction to non-function pointer fields of the `struct IndexAmRoutine`
 >
 > * After I read it
 >   * ...
@@ -61,4 +61,68 @@
      
    * type: it is a table or an index
    
-2. 
+2. The non-pointer type fields of `struct IndexAmRoutine`
+
+   * `NodeTag type`: has to be `NodeTag::T_IndexAmRoutine`
+   
+     > Emm, interesting, if the value is fixed, then why do we need to specify it.
+     >
+     > Possible answer, I guess it will be type-erased.
+     
+   * `uint16 amstrategies`: Total number of strategies (operators) by which we
+     can traverse/search this AM. Zero if AM does not have a fixed set of strategies 
+     assignments.
+     
+     > QUES: If I have mutliple OPERATOR CLASSes specified for this index am, 
+     > then the value set in this field should be their operators' sum, right?
+     
+   * `uint16 amsupport`: total number of support functios that this AM uses. 
+   
+   * `uint16 amoptsprocnum`: opclass options support function number or 0.
+   
+     > QUES: what is this?
+     
+   * `bool amcanorder`: does AM support `ORDER BY` indexed column's value? 
+   
+     > QUES: what is this?
+     
+   * `bool amcanorderbyop`: does AM support `ORDER BY` result of an operator on
+     indexed column. 
+     
+     > QUES: what is this and what's the difference between this and `amcanorder`?
+     
+   * `bool amcanbackward`: does AM support backward scanning?
+   
+   * `bool amcanunique`: does AM support `UNIQUE` indexes
+   
+      > QUES: what is this?
+      >
+      > I thought this sign indicates if this index can be used to deduplicate
+      > data, then hash index can definitely be used for that, I checked hash
+      > index's source code, but [this field is set to `false`][hash_canunique]
+      >
+      > [hash_canunique]: https://github.com/postgres/postgres/blob/2453196107de66cff0257feef2ff8585dcf9d924/src/backend/access/hash/hash.c#L67
+      
+   * `bool amcanmulticol`: does AM support multi-column indexes
+   
+   * `bool amoptionalkey`: does AM require scans to have a constraint on the first
+     index column?
+     
+     > QUES: what is this?
+     >
+     > What does "constraint" mean here? "fist index column", so this is field
+     > only makes sense if your index support multi-column scan?
+     
+   * `bool amsearcharray`: does AM handle `ScalarArrayOpExpr` quals?
+   
+     > `ScalarArrayOpExpr` refers to expressions like:
+     >
+     > 1. `item in array[]`
+     > 2. `item = ANY(ARRAY[])`
+     >
+     > It is literally "searching" the `array` for `item`, so this field is called
+     > `searcharray`.
+     
+     > `qual` means: 
+     
+   * `bool`  
