--- a/database/PostgreSQL/pg17_docs/Ch62_Index_Access_Method_Interface_Definition/62.1_Basic_API_Structure_for_Indexes.md
+++ b/database/PostgreSQL/pg17_docs/Ch62_Index_Access_Method_Interface_Definition/62.1_Basic_API_Structure_for_Indexes.md
@@ -103,6 +103,8 @@
       >
       > [hash_canunique]: https://github.com/postgres/postgres/blob/2453196107de66cff0257feef2ff8585dcf9d924/src/backend/access/hash/hash.c#L67
       
+      > This field will be mostly talked about in section [62.5](./62.5_Index_Uniqueness_Checks.md)
+      
    * `bool amcanmulticol`: does AM support multi-column indexes
    
    * `bool amoptionalkey`: does AM require scans to have a constraint on the first
@@ -125,4 +127,102 @@
      
      > `qual` means: 
      
-   * `bool`  
+   * `bool amsearchnulls`: does AM handle `IS NULL/IS NOT NULL` quals  
+   
+     > Can this index be used for queries like "SELECT * FROM foo WHERE col IS NULL".
+     
+   * `bool amstorage`: can indx storage data type differs from column data type
+   
+     > QUES: I don't quite understand this, but the `GIN` index has it set to true 
+     
+   * `bool amclusterable`: can an index of this type be clustered on
+   
+     > Postgres's [`CLUSTER`](https://www.postgresql.org/docs/current/sql-cluster.html)
+     > command sorts the table based on the order of an index, though it won't maintain
+     > the state for you.
+     
+     > QUES:
+     >
+     > 1. If the index is an ordered index, then this field can be set to true?
+     > 2. I think this is also related to the Table AM used by the table, what if
+     >    it is a columnar format.
+     
+    * `bool ampredlocks`: does AM handle predicate locks?
+    
+      > From AI:
+      >
+      > This field indicates whether the access method supports "predicate locks". 
+      > Predicate locks are a mechanism used in PostgreSQL to implement 
+      > Serializable Isolation Level.
+      >
+      > Predicate locks are different from traditional row-level locks. Instead 
+      > of locking specific rows, they lock the conditions (predicates) used to 
+      > access data. This allows PostgreSQL to detect and prevent phantoms and 
+      > write skew anomalies in serializable transactions.
+      >
+      > For example, if a transaction runs a query like "SELECT * FROM table 
+      > WHERE x > 10", a predicate lock would be placed on the condition "x > 10". 
+      > This prevents other transactions from inserting, updating, or deleting 
+      > any rows that would satisfy this condition until the first transaction 
+      > completes.
+      >
+      > Access methods that support predicate locks can provide more fine-grained 
+      > concurrency control in serializable transactions, potentially improving 
+      > performance in highly concurrent environments.
+      
+    * `bool amcanparallel`: does AM support parallel scan?
+    
+      > QUES: I think I understand the meaning of this field, but I don't understand
+      > how parallel scan works in Postgres.
+      
+    * `bool amcanbuildparallel`: does AM support parallel build
+    
+      > QUES: I think I understand the meaning of this field, but I don't understand
+      > how parallel index build works in Postgres.
+      
+    * `bool amcaninclude`: does AM support columns included with clause `INCLUDE`?  
+    
+      > QUES: have no idea what `INCLUDE` clause is
+      >
+      > [inlcude columns in btree indexes](https://use-the-index-luke.com/blog/2019-04/include-columns-in-btree-indexes)
+      
+    * `bool amusemaintenanceworkmem`: does AM use maintenance_work_mem
+    
+      > What is `maintenance_work_mem`: memory to be used by maintenance operations,
+      > such as `VACUUM`, `CREATE INDEX`, and `ALTER TABLE ADD FOREIGN KEY`.
+     
+    * `bool amsummarizing`: does AM summarize tuples, with at least all tuples 
+      in the block summarized in one summary
+      
+      > QUES: no idea what "summary" means here
+      
+    * `uint8 amparallelvacuumoptions`: a bitflat, OR of parallel vacuum flags.
+    
+      > flags for parallel vacuum are defined in:
+      >
+      > https://github.com/postgres/postgres/blob/d5ca15ee54bf7faf038a38408e8adec971740966/src/include/commands/vacuum.h#L29-L69
+    
+    * `Oid amkeytype`: type of data stored in index, or InvalidOid if variable.
+    
+      > QUES: if `amstorage` is false, then I guess this field has to be the 
+      > column type's Oid.
+
+3. When you define an index, it has an entry in `pg_class`, plus a `pg_index`
+   entry.
+   
+4. The indexed columns can be
+
+   * simple columns of of the underlying table
+   * expressions over the table row (or column?)
+   
+5. All the support functions of `IndexAmRoutine` has an argument of type 
+   `Relation`, which has access to this index instance's `pg_index` entry
+   
+   ```c
+   /* These are non-NULL only for an index relation: */
+	 Form_pg_index rd_index;		/* pg_index tuple describing this index */
+	 /* use "struct" here to avoid needing to include htup.h: */
+	 struct HeapTupleData *rd_indextuple;	/* all of pg_index tuple */
+   ```
+   
+6. 
