--- a/database/PostgreSQL/pg17_docs/Ch62_Index_Access_Method_Interface_Definition/62.1_Basic_API_Structure_for_Indexes.md
+++ b/database/PostgreSQL/pg17_docs/Ch62_Index_Access_Method_Interface_Definition/62.1_Basic_API_Structure_for_Indexes.md
@@ -44,10 +44,13 @@
    * name: the name of the AM
    * handler: a function that returns the defined  `struct IndexAmRoutine`. 
      It will takes a dummy argument of type `internal` to prevent it from 
-     being accidentially called in normal SQL. The returned struct has to
-     be `palloc()`'d:
+     being accidentially called in normal SQL(this function can be accessed in
+     SQL `CREATE FUNCTION`). The returned struct has to be `palloc()`'d:
      
      In Rust, it will be typically like:
+     
+     > QUES: No idea why pg_search `CREATE FUNCTION` again in the `sql = ` because
+     > I thought `#[pg_extern()]` would alredy do that for you.
      
      ```rust
      #[pg_extern(sql = "
@@ -58,16 +61,16 @@
      fn bm25_handler(_fcinfo: pg_sys::FunctionCallInfo) -> PgBox<pg_sys::IndexAmRoutine> 
      ```
      
-     
    * type: it is a table or an index
    
 2. The non-pointer type fields of `struct IndexAmRoutine`
 
    * `NodeTag type`: has to be `NodeTag::T_IndexAmRoutine`
    
-     > Emm, interesting, if the value is fixed, then why do we need to specify it.
+     > QUES: Emm, interesting, if the value is fixed, then why do we need to 
+     > specify it.
      >
-     > Possible answer, I guess it will be type-erased.
+     > Possible answer, I guess `IndexAmRoutine` will be type-erased.
      
    * `uint16 amstrategies`: Total number of strategies (operators) by which we
      can traverse/search this AM. Zero if AM does not have a fixed set of strategies 
@@ -106,14 +109,47 @@
       > This field will be mostly talked about in section [62.5](./62.5_Index_Uniqueness_Checks.md)
       
    * `bool amcanmulticol`: does AM support multi-column indexes
-   
-   * `bool amoptionalkey`: does AM require scans to have a constraint on the first
-     index column?
      
-     > QUES: what is this?
+     If this is set to true, then the AM must support scans that omit restrictions
+     on any or all of the columns after the first.
+     
+     A related restriction is that an index access method that supports multiple 
+     index columns must support indexing null values in columns after the first, 
+     because the planner will assume the index can be used for queries that do 
+     not restrict these columns. 
+   
+   * `bool amoptionalkey`: If true (`key` is `optional`), then this AM allows 
+     index scans to have no constrint over the first index column.
+     
+     > The code comment "does AM require scans to have a constraint on the first 
+     > index column?"
+     
+     > QUES(Solved): what is this?
      >
      > What does "constraint" mean here? "fist index column", so this is field
      > only makes sense if your index support multi-column scan?
+     >
+     > Answer: 
+     > 
+     > 1. constraint means condition in the `WHERE` clause
+     > 2. If the index can only be used with 1 column, this field still makes
+     >    sense, the first column will be just that column.
+     >    when `amcanmulticol` is `false`, then this field literally means that
+     >    whether this index supports full-index scan without any restriction
+     >    clause.
+     
+     > For all the built-in index types supported by Postgres, hash index is the 
+     > only one that sets this to `false`.
+     
+     QUES: understand this: 
+     This pg doc says: One reason that an index AM might set `amoptionalkey` false 
+     is if it doesn't index null values. Since most indexable operators are strict
+     and hence cannot return true for null inputs, it is at first sight attractive 
+     to not store index entries for null values: they could never be returned by 
+     an index scan anyway. However, this argument fails when an index scan has 
+     no restriction clause for a given index column. In practice this means that 
+     indexes that have amoptionalkey true must index nulls, since the planner might 
+     decide to use such an index with no scan keys at all. 
      
    * `bool amsearcharray`: does AM handle `ScalarArrayOpExpr` quals?
    
@@ -125,7 +161,7 @@
      > It is literally "searching" the `array` for `item`, so this field is called
      > `searcharray`.
      
-     > `qual` means: 
+     > `qual` means qualification
      
    * `bool amsearchnulls`: does AM handle `IS NULL/IS NOT NULL` quals  
    
@@ -182,11 +218,15 @@
       
     * `bool amcaninclude`: does AM support columns included with clause `INCLUDE`?  
     
+      Can this index AM store additional columns beyond the index columns. These
+      columns are called include columns, they are index columns, `amcanmulticol`
+      and `amoptionalkey` do not apply to them.
+    
       > QUES: have no idea what `INCLUDE` clause is
       >
       > [inlcude columns in btree indexes](https://use-the-index-luke.com/blog/2019-04/include-columns-in-btree-indexes)
       
-    * `bool amusemaintenanceworkmem`: does AM use maintenance_work_mem
+    * `bool amusemaintenanceworkmem`: does AM use `maintenance_work_mem`
     
       > What is `maintenance_work_mem`: memory to be used by maintenance operations,
       > such as `VACUUM`, `CREATE INDEX`, and `ALTER TABLE ADD FOREIGN KEY`.
@@ -196,7 +236,7 @@
       
       > QUES: no idea what "summary" means here
       
-    * `uint8 amparallelvacuumoptions`: a bitflat, OR of parallel vacuum flags.
+    * `uint8 amparallelvacuumoptions`: a bitflag, OR of parallel vacuum flags.
     
       > flags for parallel vacuum are defined in:
       >
